[project]
name = "projectd"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Ma", email = "eyucma@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[DESIGN]
# Maximum number of arguments for function/method
max-args=10